fix(timeline): better display on mobile device. #1096

--- a/frontend/assets/variables.scss
+++ b/frontend/assets/variables.scss
@@ -4,6 +4,7 @@
 // $font-size-root: 20px;
 
 $header-height: 65px;
+$mobile-header-height: 55px;
 
 $warning-primary: rgb(251, 140, 0);
 $warning-secondary: rgb(251, 140, 0, 0.1);
